@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** November 24, 2009 **
+vtapp.py module changed to make easier interaction with plugins.
+
 ** November 23, 2009 **
 Layout of csv plugin changed to allow future additions; modules, icons,...
 
